--- a/kaggle/PGS5/PGS5_ep3/B.Ensemble.ipynb
+++ b/kaggle/PGS5/PGS5_ep3/B.Ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "94507e5a-902e-4465-ba97-29ef2ae5ad7d",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sgml, sgutil\n",
-    "import joblib"
+    "import joblib\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -26,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6e3d632d-15d4-441c-bd1d-09cf5af8d453",
    "metadata": {},
    "outputs": [],
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "1d636d1d-cfa6-4727-a199-d0830936f48f",
    "metadata": {},
    "outputs": [
@@ -293,7 +296,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "8c600b4e-5a36-489a-97be-835f8dd124da",
    "metadata": {},
    "outputs": [
@@ -349,7 +352,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "16f94e26-2bcc-4c7a-980c-e9f58404a0e4",
    "metadata": {},
    "outputs": [
@@ -372,7 +375,7 @@
        "0.9010145903479236"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,14 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "id": "3a4ffb59-b8be-48cb-a1f4-efbeb88f337b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4333c8a8dcb74155aa00f202baa1f7b9",
+       "model_id": "53f9705bcdb646f9a1d015789b1f9a1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -409,7 +412,7 @@
        "(0.9019472502805836, 0.012426092566867313)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "id": "f377999d-2883-4afd-b0e3-047670fc88e9",
    "metadata": {},
    "outputs": [
@@ -534,7 +537,7 @@
        "lr_bfs_f      0.156056  0.025926  0.166132"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,14 +551,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "id": "bc504a1c-2a9b-4202-8834-9ecd48581d60",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54b6f3e7319548eb962a553cabaf614d",
+       "model_id": "5a416c27c56045ef82145e00894dea54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -572,7 +575,7 @@
        "(0.9020594837261504, 0.012224427528991378)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "id": "ca441490-2259-4f20-8177-d274f717c030",
    "metadata": {},
    "outputs": [],
@@ -598,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "cb1b7cea-6523-4f3b-b6af-0e741321b713",
    "metadata": {},
    "outputs": [
@@ -608,7 +611,7 @@
        "0.9009921436588104"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,14 +624,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "id": "09a4540a-b9e5-4c2c-a8a1-8cf75e25f96b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32e77c70b1d64a2dbd76e4733a802bd3",
+       "model_id": "2e08ede4c5a049648dfe69dec35d4128",
        "version_major": 2,
        "version_minor": 0
       },
@@ -642,10 +645,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.9020482603815937, 0.011932188906025022)"
+       "(0.9020482603815937, 0.011932188906025045)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "id": "dd1a889b-ffde-4506-b007-85f2bf65c06d",
    "metadata": {},
    "outputs": [],
@@ -671,47 +674,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "id": "11fa27a5-a20b-4134-a368-63ade5349183",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9006172839506174"
+       "0.9005858585858585"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "s_avg = pd.concat([s_stk_lr, s_stk_svc, df_stk.mean(axis=1)], axis=1).mean(axis=1)\n",
     "roc_auc_score(\n",
-    "    s_target,\n",
-    "    pd.concat([s_stk_lr, s_stk_svc, df_stk.mean(axis=1)], axis=1).mean(axis=1)\n",
+    "    s_target, s_avg\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "c545cfff-9abb-4d10-beba-09dd2e4dfb6c",
+   "execution_count": 33,
+   "id": "8afd967d-c750-4da4-9d92-cd3769c240a6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Value after * must be an iterable, not NoneType",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[70], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m predictors \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m----> 2\u001b[0m     i: \u001b[43msc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_predictor_cv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m sc\u001b[38;5;241m.\u001b[39mget_cv_list()\n\u001b[1;32m      3\u001b[0m }\n\u001b[1;32m      5\u001b[0m df_test \u001b[38;5;241m=\u001b[39m data_processor\u001b[38;5;241m.\u001b[39mtransform([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/test.csv\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      6\u001b[0m df_stk_test \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([\n\u001b[1;32m      7\u001b[0m     v(df_test)\u001b[38;5;241m.\u001b[39mrename(k) \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m predictors\u001b[38;5;241m.\u001b[39mitems()\n\u001b[1;32m      8\u001b[0m ], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "File \u001b[0;32m/mnt/d/work/sunkusun9/kaggle/PGS5/PGS5_ep3/sgutil.py:140\u001b[0m, in \u001b[0;36mSGCache.get_predictor_cv\u001b[0;34m(self, cv_name, config)\u001b[0m\n\u001b[1;32m    138\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_predictor_cv\u001b[39m(\u001b[38;5;28mself\u001b[39m, cv_name, config):\n\u001b[1;32m    139\u001b[0m     cv_obj \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mread_cv(cv_name)\n\u001b[0;32m--> 140\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m sgml\u001b[38;5;241m.\u001b[39massemble_predictor(\u001b[38;5;241m*\u001b[39msgml\u001b[38;5;241m.\u001b[39mload_predictor(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_path, cv_name, cv_obj[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madapter\u001b[39m\u001b[38;5;124m'\u001b[39m]), config)\n",
-      "\u001b[0;31mTypeError\u001b[0m: Value after * must be an iterable, not NoneType"
-     ]
+     "data": {
+      "text/plain": [
+       "id\n",
+       "0       0.946956\n",
+       "1       0.954458\n",
+       "2       0.152210\n",
+       "3       0.954709\n",
+       "4       0.100463\n",
+       "          ...   \n",
+       "2185    0.953396\n",
+       "2186    0.954695\n",
+       "2187    0.801946\n",
+       "2188    0.951806\n",
+       "2189    0.954069\n",
+       "Length: 2190, dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "sc.cache_result(\n",
+    "    'e_prd', lambda : s_avg\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c545cfff-9abb-4d10-beba-09dd2e4dfb6c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "predictors = {\n",
     "    i: sc.get_predictor_cv(i, config) for i in sc.get_cv_list()\n",
@@ -863,9 +888,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7284cb6-9378-4259-9b5e-137682ee8d26",
+   "metadata": {},
+   "source": [
+    "# Submission 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c08847b1-5a48-484c-b79d-0acb4b0cebc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hparams = {\n",
+    "    'model_params': {'C': 0.01},\n",
+    "    'X_num': df_coef.iloc[3:].index.tolist()\n",
+    "}\n",
+    "objs, spec = sgml.train(df_stk.assign(rainfall=s_target), hparams, config, lr_adapter)\n",
+    "lr_stk = sgml.assemble_predictor(objs['model'], objs.get('preprocessor'), spec, config)\n",
+    "lr_stk(df_stk_test).rename(target).to_csv('result/submission4.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c95415f0-2cef-47b1-8624-18b9dfa70a2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.6.17 / client 1.6.12)\n",
+      "100%|██████████████████████████████████████| 17.1k/17.1k [00:01<00:00, 15.8kB/s]\n",
+      "Successfully submitted to Binary Prediction with a Rainfall Dataset"
+     ]
+    }
+   ],
+   "source": [
+    "# 0.84499\n",
+    "#!kaggle competitions submit -c playground-series-s5e3 -f result/submission4.csv -m \"4\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2fce2d3-e991-44b5-9d61-f434fd3cfcf6",
+   "metadata": {},
+   "source": [
+    "# Submission 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5fdac745-1b7b-4e5d-be3a-fa9c2f67401f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hparams = {\n",
+    "    'model_params': {'C': 0.01, 'probability': True, 'kernel': 'linear'},\n",
+    "    'X_num': df_stk.columns.tolist()\n",
+    "}\n",
+    "objs, spec = sgml.train(df_stk.assign(rainfall=s_target), hparams, config, svc_adapter)\n",
+    "svc_stk = sgml.assemble_predictor(objs['model'], objs.get('preprocessor'), spec, config)\n",
+    "svc_stk(df_stk_test).rename(target).to_csv('result/submission5.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "99fc1ea3-7228-40f4-aef1-d1eb485fb24a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.6.17 / client 1.6.12)\n",
+      "100%|██████████████████████████████████████| 17.1k/17.1k [00:01<00:00, 17.0kB/s]\n",
+      "Successfully submitted to Binary Prediction with a Rainfall Dataset"
+     ]
+    }
+   ],
+   "source": [
+    "# 0.84714\n",
+    "# !kaggle competitions submit -c playground-series-s5e3 -f result/submission5.csv -m \"5\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dec9b03e-a484-4c35-9189-3ca51747def7",
+   "metadata": {},
+   "source": [
+    "# Submission 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1dc48975-35cc-4e73-9c77-3d08fa62b97f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_stk_test.mean(axis=1).rename(target).to_csv('result/submission6.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8f09d2be-4568-4c6f-887a-0d6f9e0de009",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.6.17 / client 1.6.12)\n",
+      "100%|██████████████████████████████████████| 17.1k/17.1k [00:01<00:00, 16.3kB/s]\n",
+      "Successfully submitted to Binary Prediction with a Rainfall Dataset"
+     ]
+    }
+   ],
+   "source": [
+    "# 0.84553\n",
+    "# !kaggle competitions submit -c playground-series-s5e3 -f result/submission6.csv -m \"6\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51037f7e-717c-49ac-9ee3-71f2b247f3d0",
+   "metadata": {},
+   "source": [
+    "# Submission 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6e5ae34b-a4bb-4d3e-9c30-86789e106995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat([\n",
+    "    lr_stk(df_stk_test),\n",
+    "    svc_stk(df_stk_test),\n",
+    "    df_stk_test.mean(axis=1),\n",
+    "], axis=1).mean(axis=1).rename(target).to_csv('result/submission7.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b0adfdf2-f780-4f2b-a364-f6e92b83efdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.6.17 / client 1.6.12)\n",
+      "100%|██████████████████████████████████████| 17.1k/17.1k [00:01<00:00, 15.3kB/s]\n",
+      "Successfully submitted to Binary Prediction with a Rainfall Dataset"
+     ]
+    }
+   ],
+   "source": [
+    "# 0.84607\n",
+    "#!kaggle competitions submit -c playground-series-s5e3 -f result/submission7.csv -m \"7\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae838d38-0bf6-4701-a7f2-5b36345cf1d4",
+   "id": "94324355-3e3b-42fc-ab7c-8396bf543e74",
    "metadata": {},
    "outputs": [],
    "source": []
