--- a/kaggle/PGS5/PGS5_ep3/2.Feature Selection.ipynb
+++ b/kaggle/PGS5/PGS5_ep3/2.Feature Selection.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "0da40afc-9329-4403-97d0-f62a8fe0aec8",
    "metadata": {},
    "outputs": [],
@@ -113,13 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "0d980a18-e374-4dc3-915a-fc2e9afb728c",
    "metadata": {},
    "outputs": [],
    "source": [
     "target = 'rainfall'\n",
-    "sc = sgutil.SGCache('img', 'result')\n",
+    "sc = sgutil.SGCache('img', 'result', 'model')\n",
     "_ = sc.cache_result(\n",
     "    'target', lambda : df_train[target].sort_index()\n",
     ")"
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "a5580597-78e9-4db9-bb2d-0a9bf06c5238",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "65"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4065,7 +4065,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
