--- a/kaggle/PGS5/PGS5_ep3/3.Feature Selection2.ipynb
+++ b/kaggle/PGS5/PGS5_ep3/3.Feature Selection2.ipynb
@@ -64,6 +64,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "d96d37de-03e7-4d56-84c3-1c083181c3e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dewpoint_4',\n",
+       " 'dewpoint_5',\n",
+       " 'dewpoint_6',\n",
+       " 'expected_day',\n",
+       " 'sin_wd_1',\n",
+       " 'sunshine_4'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(X_all) - set(s_val.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "112dc152-b367-4b16-854f-c2ded26e4de2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cos_wd            3\n",
+       "dewpoint_3        3\n",
+       "pressure          3\n",
+       "sin_wd_2          3\n",
+       "windspeed_ma24    3\n",
+       "cloud_ma24        3\n",
+       "maxtemp           3\n",
+       "cos_wd_1          3\n",
+       "chp_4             3\n",
+       "chp_2             3\n",
+       "cloud             2\n",
+       "pressure_ma24     2\n",
+       "humidity          2\n",
+       "cloud_4           2\n",
+       "cos_wd_2          2\n",
+       "mintemp_ma24      2\n",
+       "sin_wd            2\n",
+       "sunshine_6        2\n",
+       "chp_6             2\n",
+       "sin_wd_ma24       2\n",
+       "cos_wd_6          1\n",
+       "sunshine_2        1\n",
+       "cos_wd_ma24       1\n",
+       "sunshine_5        1\n",
+       "winddirection     1\n",
+       "sin_wd_5          1\n",
+       "sin_wd_4          1\n",
+       "sin_wd_3          1\n",
+       "cloud_2           1\n",
+       "cos_wd_3          1\n",
+       "chp_5             1\n",
+       "chp_1             1\n",
+       "dewpoint_1        1\n",
+       "cos_wd_5          1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_val.loc[s_val <= 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "5e24adc6-d10d-4c96-b7bd-6ece08717a9d",
    "metadata": {},
@@ -486,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38867cae-3d9c-43ac-b198-08fe3845a8d0",
+   "id": "550e4b18-e0d3-4462-8164-35c16645d039",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -508,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
