--- a/kaggle/PGS5/PGS5_ep3/5. Leaderboard Probing.ipynb
+++ b/kaggle/PGS5/PGS5_ep3/5. Leaderboard Probing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "a7d2902b-ddc9-4b87-b0b3-e0844a4dd08e",
    "metadata": {},
    "outputs": [],
@@ -23,10 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "0adbecab-38fe-43a8-9a6f-d891a65a410d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/sun9sun9/.config/kaggle/kaggle.json'\n",
+      "Output file downloaded to /mnt/d/work/sunkusun9/kaggle/PGS5/PGS5_ep3/submission.csv\n",
+      "Kernel log downloaded to /mnt/d/work/sunkusun9/kaggle/PGS5/PGS5_ep3/lb-probing-hitchhiker-version.log \n"
+     ]
+    }
+   ],
    "source": [
     "if not os.path.exists('data/lb_probing.csv'):\n",
     "    !kaggle kernels output act18l/lb-probing-hitchhiker-version\n",
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "757093f1-4e88-4b76-97c8-1df9a661f523",
    "metadata": {},
    "outputs": [],
@@ -51,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aacde15e-eda3-4f07-bb64-fef7a9cc2d45",
+   "id": "0a8e28b5-a8fa-4f88-a88e-a358d8917256",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -73,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
