--- a/kaggle/PGS5/PGS5_ep3/Data Processing2.ipynb
+++ b/kaggle/PGS5/PGS5_ep3/Data Processing2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "dd3fdeeb-3fcf-49b7-8851-8586343851b2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "570ec67a-2b56-468d-bb5f-1c3bc6abc351",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "0c0303b5-7700-411a-9953-75277bef1720",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "['model/data_processor2.joblib']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "a1ac1bd2-56a6-425f-a861-28b88a8d32bb",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "['model/data_processor_org2.joblib']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,12 @@
    "id": "302f0969-88f3-4166-aed3-11775c17f514",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sc.cache_result(\n",
+    "    'target2',\n",
+    "    lambda : df_train[target]\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
@@ -203,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
