--- a/kaggle/Elucidata/ML_eff_b0.ipynb
+++ b/kaggle/Elucidata/ML_eff_b0.ipynb
@@ -114,7 +114,7 @@
     "            i: df[i] for i in ['left', 'right', 'top', 'bottom', 'slide', 'lpad', 'rpad', 'tpad', 'bpad']\n",
     "        })\n",
     "\n",
-    "def proc_images(X):\n",
+    "def proc_images(X, images):\n",
     "    return tf.pad(\n",
     "        images[X['slide'], X['left']:X['right'], X['top']:X['bottom'], :], \n",
     "        paddings = [(X['lpad'], X['rpad']), (X['tpad'], X['bpad']), (0, 0)],\n",
@@ -221,13 +221,13 @@
     "        ])\n",
     "    )\n",
     ").shuffle(5000).map(\n",
-    "    lambda X, Y: (proc_images(X), Y)\n",
+    "    lambda X, Y: (proc_images(X, images), Y)\n",
     ").map(\n",
     "    lambda X, Y: (data_augmentation(X), Y)\n",
     ").batch(batch_size).prefetch(tf.data.AUTOTUNE).cache()\n",
     "\n",
     "ds_valid = create_tf_ds(df_spots.loc[df_spots['slide'] == 5]).map(\n",
-    "    lambda X, Y: (proc_images(X), Y)\n",
+    "    lambda X, Y: (proc_images(X, images), Y)\n",
     ").batch(batch_size).prefetch(tf.data.AUTOTUNE).cache()"
    ]
   },
@@ -443,7 +443,7 @@
     "        ])\n",
     "    )\n",
     ").shuffle(5000).map(\n",
-    "    lambda X, Y: (proc_images(X), Y)\n",
+    "    lambda X, Y: (proc_images(X, images), Y)\n",
     ").map(\n",
     "    lambda X, Y: (data_augmentation(X), Y)\n",
     ").batch(batch_size).prefetch(tf.data.AUTOTUNE).cache()\n",
@@ -531,7 +531,7 @@
     "df_submission = pd.DataFrame(\n",
     "    np.exp(\n",
     "        m.predict(\n",
-    "            ds_test.map(lambda X: proc_images(X)).batch(32)\n",
+    "            ds_test.map(lambda X: proc_images(X, images_test)).batch(32)\n",
     "        )\n",
     "    ), columns = targets\n",
     ").reset_index().rename(columns = {'index': 'ID'})"
